# anvil-context-compiler

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: PATENT_DISCLOSURE_DRAFT.md  PRODUCT_SPEC.md  SECURITY.md
examples/: sample_context.md  tools.json
scripts/: Setup-Anvil.ps1  Start-Anvil.ps1  Test-Anvil.ps1
src/anvil_context_compiler/: __init__.py  api.py  budget.py  cli.py  compiler.py  compressor.py  hashing.py  ledger.py  models.py  proof.py  text.py  token_meter.py  tools.py
tests/: test_api.py  test_compiler.py
